--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
   <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
   <script type="text/javascript" src="javascripts/script.js"></script>
 
-  <title>Nganimate</title>
-  <meta name="description" content="ngAnimate is simple Angular Directive, which you can easily use animateCss in your Pages ">
+  <title>AnimateCss</title>
+  <meta name="description" content="AnimateCss [ngAnimate] is simple Angular Directive, which you can easily use AnimateCss in your Pages ">
 
   <meta name="viewport" content="width=device-width,initial-scale=1">
 
@@ -22,29 +22,29 @@
 
   <div class="wrapper">
     <header>
-      <h1 class="title">Nganimate</h1>
+      <h1 class="title">AnimateCss</h1>
     </header>
     <div id="container">
-      <p class="tagline">ngAnimate is simple Angular Directive, which you can easily use animateCss in your Pages </p>
+      <p class="tagline">AnimateCss [ngAnimate] is simple Angular Directive, which you can easily use AnimateCss in your Pages </p>
       <div id="main" role="main">
         <div class="download-bar">
         <div class="inner">
-          <a href="https://github.com/maherAshori/ngAnimate/tarball/master" class="download-button tar"><span>Download</span></a>
-          <a href="https://github.com/maherAshori/ngAnimate/zipball/master" class="download-button zip"><span>Download</span></a>
-          <a href="https://github.com/maherAshori/ngAnimate" class="code">View Nganimate on GitHub</a>
+          <a href="https://github.com/maherAshori/AnimateCss/tarball/master" class="download-button tar"><span>Download</span></a>
+          <a href="https://github.com/maherAshori/AnimateCss/zipball/master" class="download-button zip"><span>Download</span></a>
+          <a href="https://github.com/maherAshori/AnimateCss" class="code">View AnimateCss on GitHub</a>
         </div>
         <span class="blc"></span><span class="trc"></span>
         </div>
         <article class="markdown-body">
           <h1>
-<a id="nganimate" class="anchor" href="#nganimate" aria-hidden="true"><span class="octicon octicon-link"></span></a>ngAnimate</h1>
+<a id="animatecss" class="anchor" href="#animatecss" aria-hidden="true"><span class="octicon octicon-link"></span></a>AnimateCss</h1>
 
 <p><em>v1.3.0</em></p>
 
 <blockquote>
-<p>ngAnimate is simple Angular Directive, which you can easily use animateCss in your Pages 
+<p>AnimateCss[ngAnimate] is simple Angular Directive, which you can easily use animateCss in your Pages 
 <br>
-<b>Nuget Link:</b> (<a href="https://www.nuget.org/packages/AnimateCss/">ngAnimate</a>)
+<b>Nuget Link:</b> (<a href="https://www.nuget.org/packages/AnimateCss/">AnimateCss</a>)
 <br></p>
 
 <h1>
@@ -77,7 +77,7 @@
     </div>
     <footer>
       <div class="owner">
-      <p><a href="https://github.com/maherAshori" class="avatar"><img src="https://avatars1.githubusercontent.com/u/11519764?v=3&amp;s=60" width="48" height="48"></a> <a href="https://github.com/maherAshori">maherAshori</a> maintains <a href="https://github.com/maherAshori/ngAnimate">Nganimate</a></p>
+      <p><a href="https://github.com/maherAshori" class="avatar"><img src="https://avatars1.githubusercontent.com/u/11519764?v=3&amp;s=60" width="48" height="48"></a> <a href="https://github.com/maherAshori">maherAshori</a> maintains <a href="https://github.com/maherAshori/AnimateCss">AnimateCss</a></p>
 
 
       </div>
@@ -88,7 +88,7 @@
   </div>
   <div class="current-section">
     <a href="#top">Scroll to top</a>
-    <a href="https://github.com/maherAshori/ngAnimate/tarball/master" class="tar">tar</a><a href="https://github.com/maherAshori/ngAnimate/zipball/master" class="zip">zip</a><a href="" class="code">source code</a>
+    <a href="https://github.com/maherAshori/AnimateCss/tarball/master" class="tar">tar</a><a href="https://github.com/maherAshori/AnimateCss/zipball/master" class="zip">zip</a><a href="" class="code">source code</a>
     <p class="name"></p>
   </div>
 
